--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,13 @@
         android:roundIcon = "@mipmap/ic_launcher_round"
         android:supportsRtl = "true"
         android:theme = "@style/AppTheme">
-        <activity android:name = ".HouseDetailActivity"
-            android:parentActivityName=".MainActivity"
+        <activity android:name = ".activities.HouseDetailActivity"
+            android:parentActivityName=".activities.MainActivity"
             android:theme = "@style/AppTheme.NoActionBar">
 
         </activity>
         <activity
-            android:name = ".MainActivity"
+            android:name = ".activities.MainActivity"
             android:theme = "@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name = "android.intent.action.MAIN" />
